@startuml
'https://plantuml.com/class-diagram
skinparam sequenceMessageAlign center
title TO CREATE NEW PROFILE
legend top
US001 - As Administrator, I want to create user profiles.
end legend

class "CreateProfileController" {
- profileService
+ createProfile(profileName)
}

class ProfileService{
- profileRepository
- profileFactory
+ createProfile(profileName)
+ calculateNextProfileNumber()
}

interface IProfileFactory{
+ createProfile(profileName, idProfileNumber)
}

class ProfileFactory{
+ createProfile(profileName, idProfileNumber)
}

interface IProfileRepository{
+ add(profile)
+ getSize()
}

class ProfileRepository{
+ add(profile)
+ getSize()
}

class Profile<<root>>{
- profileName
}

CreateProfileController <.. ProfileService: is injected
ProfileService <.. IProfileRepository: is injected
ProfileService <.. IProfileFactory: is injected
IProfileFactory <|.. ProfileFactory: implements
ProfileFactory ..> Profile: creates
IProfileRepository <|.. ProfileRepository: implements
ProfileRepository --> Profile: has

@enduml